Add chapter version number support and improve formatting.
+ Add `getNumberWithVersionInteger` method to `Chapter` for versioned chapter numbers.
+ Update `ChapterNotifyService` to use new chapter version numbering in notifications.
+ Replace `collect(Collectors.toList())` with `toList()` for simplicity.
- Remove unused imports and unnecessary blank lines for better code readability.